sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: not found: value getvaleur
    while(stockeur < getvaleur(i-a) && continue){
                     ^